tests/NormalTests/paczka1/fuzzy1/14829548.err
Error in line 2: 58oh S826 97,7
Error in line 10: S633 S35 19,3
Error in line 17: S633 S826 74,0
Error in line 29: 5UHeiDNM9Vg S35 73,0
